--- a/src/index.html
+++ b/src/index.html
@@ -12,6 +12,7 @@
     <h1 class="classA" id="idA">私はclassAです。</h1>
     <h1 class="classB">私はclassBです。</h1>
     <h1 class="classC">私はclassCです。</h1>
+    <script src="js/hello.js"></script>
     <script src="js/index.js"></script>
   </body>
 </html>
