--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,8 @@
     <title>JavaScript練習💥</title>
   </head>
   <body>
+    <h1>テキスト</h1>
+    <button>Click ME!!</button>
     <script src="js/index.js"></script>
   </body>
 </html>
