--- a/src/index.html
+++ b/src/index.html
@@ -9,8 +9,10 @@
     <title>JavaScript練習💥</title>
   </head>
   <body>
-    <h1>テキスト</h1>
-    <button>Click ME!!</button>
+    <form id="login-form">
+      <input type="text" placeholder="What is your name" maxlength="5" />
+      <button>Log in</button>
+    </form>
     <script src="js/index.js"></script>
   </body>
 </html>
