--- a/src/index.html
+++ b/src/index.html
@@ -6,13 +6,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="css/style.css" />
-    <title>JavaScript練習💥</title>
+    <title>BU4-13</title>
   </head>
   <body>
-    <form id="login-form">
-      <input type="text" placeholder="What is your name" maxlength="5" />
-      <button>Log in</button>
-    </form>
     <script src="js/index.js"></script>
   </body>
 </html>
