--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,8 @@
     <title>BU4-13</title>
   </head>
   <body>
+    <h1>Hello World</h1>
+    <button>Click ME!</button>
     <script src="js/index.js"></script>
   </body>
 </html>
