--- a/src/index.html
+++ b/src/index.html
@@ -11,6 +11,10 @@
   <body>
     <h1 class="orange">Hello World</h1>
     <button>Click ME!</button>
+    <form id="loginForm" method="get">
+      <input type="number" required min="20" placeholder="おいくつですか？" />
+      <button>確認</button>
+    </form>
     <script src="js/index.js"></script>
   </body>
 </html>
