--- a/src/index.html
+++ b/src/index.html
@@ -12,9 +12,10 @@
     <h1 class="orange">Hello World</h1>
     <button>Click ME!</button>
     <form id="loginForm" method="get">
-      <input type="number" required min="20" placeholder="おいくつですか？" />
+      <input type="number" placeholder="おいくつですか？" />
       <button>確認</button>
     </form>
+    <h1 id="welcome" class="hidden"></h1>
     <script src="js/index.js"></script>
   </body>
 </html>
